--- a/deploy/distrib/src/main/resources/tomcat/conf/bitronix-resources.properties
+++ b/deploy/distrib/src/main/resources/tomcat/conf/bitronix-resources.properties
@@ -42,3 +42,7 @@ resource.ds1.testQuery=SELECT 1
 #resource.ds1.testQuery=SELECT 1
 # Because of a MySQL Driver bug in case of deadlocks occuring in a distributed transaction, it may help to set the testQuery to ROLLBACK instead of SELECT 1
 ##resource.ds1.testQuery=ROLLBACK
+
+# Derby example
+resource.ds1.className=org.apache.derby.jdbc.EmbeddedXADataSource
+#resource.ds1.testQuery=SELECT 1
