--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
 		<jboss.version>${jboss.version.minor}.1.Final</jboss.version>
 		<h2.version>1.3.170</h2.version>
 		<slf4j.version>1.6.1</slf4j.version>
+                <derby.version>10.11.1.1</derby.version>
 	</properties>
 
 	<dependencyManagement>
