EB-30 : add Tomcat datasource erby properties (forgot them before)

--- a/deploy/distrib/src/main/resources/tomcat/conf/bitronix-resources.properties
+++ b/deploy/distrib/src/main/resources/tomcat/conf/bitronix-resources.properties
@@ -46,6 +46,9 @@ resource.ds1.testQuery=SELECT 1
 # Because of a MySQL Driver bug in case of deadlocks occuring in a distributed transaction, it may help to set the testQuery to ROLLBACK instead of SELECT 1
 ##resource.ds1.testQuery=ROLLBACK
 
+# Derby example
+#resource.ds1.className=org.apache.derby.jdbc.EmbeddedXADataSource
+#resource.ds1.testQuery=SELECT 1
 
 ###################################
 # BONITA 'Business Data' Datasource (may be different for each tenant)
@@ -91,3 +94,7 @@ resource.ds2.testQuery=SELECT 1
 #resource.ds2.testQuery=SELECT 1
 # Because of a MySQL Driver bug in case of deadlocks occurring in a distributed transaction, it may help to set the testQuery to ROLLBACK instead of SELECT 1
 ##resource.ds2.testQuery=ROLLBACK
+
+# Derby example
+#resource.ds2.className=org.apache.derby.jdbc.EmbeddedXADataSource
+#resource.ds2.testQuery=SELECT 1
