--- a/deploy/distrib/src/main/resources/tomcat/conf/bitronix-resources.properties
+++ b/deploy/distrib/src/main/resources/tomcat/conf/bitronix-resources.properties
@@ -45,7 +45,8 @@ resource.ds1.testQuery=SELECT 1
 
 # Derby example
 #resource.ds1.className=org.apache.derby.jdbc.EmbeddedXADataSource
-#resource.ds1.testQuery=SELECT 1
+#resource.ds1.driverProperties.databaseName=bonita/engine-server/platform/work/bonita6_journal;create=true;collation=TERRITORY_BASED:PRIMARY
+#resource.ds1.testQuery=VALUES 1
 
 ###################################
 # BONITA 'Business Data' Datasource (may be different for each tenant)
@@ -94,4 +95,5 @@ resource.ds2.testQuery=SELECT 1
 
 # Derby example
 #resource.ds2.className=org.apache.derby.jdbc.EmbeddedXADataSource
-#resource.ds2.testQuery=SELECT 1
+#resource.ds2.driverProperties.databaseName=bonita/engine-server/platform/work/bdm;create=true;collation=TERRITORY_BASED:PRIMARY
+#resource.ds2.testQuery=VALUES 1
